--- a/01_intro/_slides/index.html
+++ b/01_intro/_slides/index.html
@@ -695,7 +695,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <h2>Deskriptive Statistik und Inferenzstatistik</h2>
 <div class="columns">
 <div class="column" style="width:65%;">
-<p>In Statistik 1 und 2 werden wir fast ausschließlich Methoden aus der <span style=" color: navy !important;">deskriptiven Statistik</span> und <span style=" color: navy !important;">Inferenzstatistik</span> behandeln.</p>
+<p>In Statistik 1 und 2 werden wir Methoden aus der <span style=" color: navy !important;"><strong>deskriptiven Statistik</strong></span> und <span style=" color: navy !important;"><strong>Inferenzstatistik</strong></span> behandeln.</p>
 <div class="definebox fragment">
 <p>Das Ziel der <span style=" color: navy !important;"><strong>deskriptiven Statistik</strong></span> ist die Beschreibung und Zusammenfassung von Daten innerhalb einer Stichprobe.</p>
 </div>
@@ -1094,9 +1094,9 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
         // The "normal" size of the presentation, aspect ratio will be preserved
         // when the presentation is scaled to fit different resolutions. Can be
         // specified using percentage units.
-        width: 1125,
+        width: 1150,
 
-        height: 750,
+        height: 770,
 
         // Factor of the display size that should remain empty around the content
         margin: 0.1,
