--- a/01_intro/_slides/index.html
+++ b/01_intro/_slides/index.html
@@ -342,7 +342,7 @@
 
   <p class="author">Prof.&nbsp;Matthias Guggenmos</p>
   <p class="institute">Health and Medical University Potsdam</p>
-  <p class="date">01.04.2023</p>
+  <p class="date">10.10.2023</p>
 <div style="display: flex; justify-content: space-between; align-items: baseline">
 <div><img src="images/logo_black.png" height="200px"></div>
 <div><img src="images/paradoxia_group_of_scientists.png" height="240px"></div>
@@ -389,7 +389,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 <p>Eine rätselhafte Erkrankung hat seit geraumer Zeit die Bundesrepublik Deutschland heimgesucht. Die Betroffenen zeigen ein paradoxes emotionales Verhalten: sie reagieren allem Anschein nach traurig auf fröhliche Ereignisse und fröhlich auf traurige Ereignisse – als wären zwei Hirndrähte vertauscht worden! <br><br></p>
 <p>Aufgrund ihres Erscheinungsbilds wird die neuartige Krankheit <u><strong>Paradoxia</strong></u> genannt.</p>
 </div><div class="column" style="width:30%;">
-<p><img data-src="images/paradoxia_happy_sad.svg" class="absolute" style="top: 0px; right: 20px; "> <!-- Source: Generic clipart --></p>
+<p><img data-src="images/paradoxia_happy_sad.png"> <!-- Source: Generic clipart --></p>
 </div>
 </div>
 </section>
@@ -476,6 +476,40 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 </tr>
 </tbody>
 </table>
+</section>
+<section class="slide level2">
+<h2>Literatur</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img data-src="images/eid_gollwitzer_schmitt.jpg" height="350"></p>
+<div style="font-size: 22px">
+<p><strong>Vorteile:</strong></p>
+<ul>
+<li class="fragment">Umfasst alles (und) mehr, was Sie für Statistik 1 und 2 wissen müssen</li>
+<li class="fragment">Sehr zuverlässige Referenz</li>
+<li class="fragment">Übungen</li>
+</ul>
+<p><strong>Nachteile:</strong></p>
+<ul>
+<li class="fragment">Recht trockener, mathematischer Stil</li>
+</ul>
+</div>
+</div><div class="column" style="width:50%;">
+<p><img data-src="images/field_cover.png" height="350"></p>
+<div style="font-size: 22px">
+<p><strong>Vorteile:</strong></p>
+<ul>
+<li class="fragment">Äußerst unterhaltsamer Stil</li>
+<li class="fragment">Intuitiver Einstieg in die Statistik</li>
+<li class="fragment">Enge Verknüpfung mit der Statistik-Programmiersprache R — sehr hilfreich für Ihre Bachelor- oder Masterarbeit.</li>
+</ul>
+<p><strong>Nachteile:</strong></p>
+<ul>
+<li class="fragment">Weniger geeignet als schnelles Nachschlagewerk</li>
+</ul>
+</div>
+</div>
+</div>
 </section></section>
 <section>
 <section class="title-slide slide level1 center">
@@ -720,15 +754,14 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 </div>
 </div>
 </div>
-<aside></aside></section>
-<section class="slide level2 blackslide center">
-<h2></h2>
-<p><img data-src="images/paradoxia_group_of_scientists.png" class="center-image" height="300"> <!-- Source: Midjourney --></p>
-<div class="vspace-small">
+<!-- ## {.blackslide .center}
 
-</div>
-<p><strong>Zurück zum Thema:</strong> wie entwickelt man gute Hypothesen? Und was ist eigentlich eine Hypothese?</p>
-</section></section>
+![](images/paradoxia_group_of_scientists.png){.center-image height=300px}
+
+<div class='vspace-small'></div>
+
+**Zurück zum Thema:** wie entwickelt man gute Hypothesen? Und was ist eigentlich eine Hypothese? -->
+<aside></aside></section></section>
 <section>
 <section class="title-slide slide level1 center">
 <h1>Hypothesen</h1>
@@ -812,7 +845,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 </tr>
 <tr class="even">
 <td><strong>Relevanz</strong></td>
-<td><em>Hypothesen sollten von theoretischer oder gesellschaftlicher Relevanz sein</em><br><u>Negativbeispiel:</u> Menschen mit roten Autos bevorzugen rote Gemüsesorten<br><u>Positivbeispiel:</u> Nach persönlichen Erfolgserlebnissen neigen Menschen zu riskantem Fahrvehalten</td>
+<td><em>Hypothesen sollten von theoretischer oder gesellschaftlicher Relevanz sein</em><br><u>Negativbeispiel:</u> Menschen mit roten Autos bevorzugen rote Gemüsesorten<br><u>Positivbeispiel:</u> Nach persönlichen Erfolgserlebnissen neigen Menschen zu riskantem Fahrverhalten</td>
 </tr>
 </tbody>
 </table>
@@ -855,7 +888,7 @@ Statistik II Vorlesung 13: partielle Korrelation und multiple Regression für Pe
 </div>
 <div class="smaller">
 <p><strong>Beispiel deterministische Hypothese:</strong> Menschen mit Alkoholabhängigkeit entwickeln eine Depression.</p>
-<p><strong>Beispiel probabilistische Hypothese:</strong> Menschen mit Alkoholabhängigkeit haben eine <em>erhöhte Wahrscheinlichkeit</em> für eine Depression.<br>Alternativ: Menschen mit Alkoholabhängigkeit haben <em>im Mittel</em> eine höhere Ausprägung depressiver Symptome.</p>
+<p><strong>Beispiel probabilistische Hypothese:</strong> Menschen mit Alkoholabhängigkeit haben <em>im Mittel</em> eine höhere Ausprägung depressiver Symptome.</p>
 </div>
 <div class="vspace-smaller">
 
