--- a/02_measurement/_slides/index.html
+++ b/02_measurement/_slides/index.html
@@ -342,7 +342,7 @@
 
   <p class="author">Prof.&nbsp;Matthias Guggenmos</p>
   <p class="institute">Health and Medical University Potsdam</p>
-  <p class="date">01.04.2023</p>
+  <p class="date">17.10.2023</p>
 <div style="display: flex; justify-content: space-between; align-items: baseline">
 <div><img src="images/logo_black.png" height="200px"></div>
 <div><img src="images/paradoxia_group_of_scientists.png" height="240px"></div>
@@ -703,8 +703,19 @@
 </tr>
 </tbody>
 </table>
-<div class="fragment greybox">
-<p><strong>NB:</strong> Die Art der Ausprägung einer Variable ist eine wichtige Information für die Auswahl einer geeigneten deskriptiven oder inferentiellen statistischen Methode</p>
+<div class="vspace-large">
+
+</div>
+<div class="notabene">
+<div class="columns">
+<div class="column" style="width:7%;">
+<div style="margin-top: 10px">
+<p><img data-src="images/notabene2.png" height="65"></p>
+</div>
+</div><div class="column" style="width:93%;">
+<p>Die Art der Ausprägung einer Variable ist eine wichtige Information für die Auswahl einer geeigneten deskriptiven oder inferentiellen statistischen Methode</p>
+</div>
+</div>
 </div>
 <!----------------->
 <!--- New slide --->
@@ -804,6 +815,7 @@
 <li class="fragment">Ein Experiment ist eine Überführung der Forschungsfrage in eine objektivierbare und quantifizierbare Untersuchung</li>
 <li class="fragment">Im Zentrum des Experimentes steht die <strong>unabhängige Variable</strong>, durch die das Experiment in zwei oder mehr <strong>experimentelle Bedingungen</strong> unterteilt wird.</li>
 </ul>
+<div class="definition">
 <!---  Definition--->
 <table>
 <colgroup>
@@ -825,6 +837,7 @@
 </tr>
 </tbody>
 </table>
+</div>
 <div class="vspace-medium">
 
 </div>
@@ -850,14 +863,20 @@
 </div>
 </div>
 <p>Im genannten Beispiel handelt sich um ein Experiment mit <span style=" color: navy !important;"><strong>within-subject Design</strong></span>, da jede Versuchsperson alle (hier zwei) Bedingungen der unabhängigen Variable durchläuft.</p>
-<!----------------->
-<!--- New slide --->
-<!----------------->
-</section>
-<section class="slide level2 center">
-<h2></h2>
-<p><img data-src="images/question.png" class="hcenter-image" height="320"></p>
-<p><span class="fontsize-prominent">Wie sähe das Experiment in einem between-subject Design aus?</span></p>
+<div class="vspace-large">
+
+</div>
+<div class="notabene">
+<div class="columns">
+<div class="column" style="width:7%;">
+<div style="margin-top: 10px">
+<p><img data-src="images/notabene2.png" height="65"></p>
+</div>
+</div><div class="column" style="width:93%;">
+<p>Überlegen Sie: wie könnte das Experiment in einem between-subject Design aussehen?</p>
+</div>
+</div>
+</div>
 <!----------------->
 <!--- New slide --->
 <!----------------->
@@ -896,6 +915,9 @@
 </tr>
 </tbody>
 </table>
+<div class="vspace-large">
+
+</div>
 <div class="quarto-figure quarto-figure-center">
 <figure>
 <p><img data-src="images/within_between_horizontal.png"></p>
@@ -906,17 +928,17 @@
 <!--- New slide --->
 <!----------------->
 <aside></aside></section>
-<section class="slide level2" style="font-size: 22px">
+<section class="slide level2" style="font-size: 24px">
 <h2>Within-subject &amp; Messwiederholung (ein kleiner Rant)</h2>
-<p>Ein synonymer Begriff für das <em>within-subject Design</em> ist <em>Design mit Messwiederholung</em> (engl. repeated measures).</p>
+<p>Ein synonymer Begriff für das <strong>within-subject Design</strong> ist <strong>Design mit Messwiederholung</strong> (engl. repeated measures).</p>
 <p>Messwiederholung bezeichnet, exakt wie das within-subject Design, die geplante Durchführung mehrerer Experimentalbedingungen an einer VP.</p>
 <p>Messwiederholung ist ein recht unglücklich gewählter und verwirrender Begriff:</p>
 <ul>
-<li class="fragment">Ursprünglich bezeichneter er vermutlich allein die Messung einer VP zu verschiedenen Zeitpunkten (z.B. Test vor und nach einer Intervention). Hier ergibt der Begriff “Wiederholung” Sinn. In der heutigen Anwendung bezieht sich der Begriff Messwiederholung allerdings nicht nur auf den within-subject Faktor “Zeit” (mit verschiedenen Messzeitpunkten als within-subject Experimentalbedingungen), sondern <em>auf jede Art</em> von within-subject Faktor (z.B. mit und ohne Eis im Cola-Beispiel). “Wiederholung” verwirrt in diesem Zusammenhang, da unterschiedliche Experimentalbedingungen getestet werden (wenn auch in derselben Person).</li>
+<li class="fragment">Ursprünglich bezeichnet der Begriff er vermutlich allein die Messung einer VP zu verschiedenen Zeitpunkten (z.B. Test vor und nach einer Intervention). Hier ergibt der Begriff “Wiederholung” Sinn. In der heutigen Anwendung bezieht sich der Begriff Messwiederholung allerdings nicht nur auf den within-subject Faktor “Zeit” (mit verschiedenen Messzeitpunkten als within-subject Experimentalbedingungen), sondern <em>auf jede Art</em> von within-subject Faktor (z.B. mit und ohne Eis im Cola-Beispiel). “Wiederholung” verwirrt in diesem Zusammenhang, da unterschiedliche Experimentalbedingungen getestet werden (wenn auch in derselben Person).</li>
 <li class="fragment">Experimente beinhalten häufig eine tatsächliche Art von Messwiederholung, nämlich die wiederholte Durchführung ein und derselben Experimentalbedingung (auch “Trial” genannt), um durch Mittelwertbildung die Präzision der Messung zu erhöhen. Hier wäre der Begriff Messwiederholung besser angebracht.</li>
 <li class="fragment">Aus dem Begriff selbst wird nicht deutlich, dass eine Messung tatsächlich innerhalb derselben VP wiederholt wird – der Begriff <em>within-subject</em> ist hier präziser.</li>
 </ul>
-<p>Der Ausdruck <em>Messwiederholung</em> oder <em>Repeated Measures</em> ist allerdings so verbreitet (in wissenschaftlichen Artikeln, Statistik-Software usw.), dass er hier Erwähnung finden muss.</p>
+<p>Der Ausdruck <em>Messwiederholung</em> oder <em>Repeated Measures</em> ist allerdings so verbreitet (in wissenschaftlichen Artikeln, Statistik-Software usw.), dass Sie ihn kennen sollten.</p>
 <!----------------->
 <!--- New slide --->
 <!----------------->
@@ -958,32 +980,32 @@
 <ul>
 <li class="fragment">In <span style=" color: navy !important;"><strong>Beobachtungsstudien</strong></span> werden Phänomene oder Zusammenhänge <em>ohne Manipulation einer unabhängigen Variable</em> untersucht.</li>
 <li class="fragment">Beispiele: Quasi-Experiment, Längsschnittstudien, Fall-Kontroll-Studie</li>
-<li class="fragment">Im Gegensatz zum Experiment(*) können in Beobachtungsstudien <strong>keine kausalen Schlüsse</strong> gezogen werden</li>
+<li class="fragment">Im Gegensatz zum Experiment können in Beobachtungsstudien <strong>keine kausalen Schlüsse</strong> gezogen werden</li>
 <li class="fragment">Warum? Jeder Unterschied zwischen Gruppen oder Zusammenhang zweier Variablen zwischen Personen kann immer auch durch (bekannte oder unbekannte) Störvariablen verursacht sein.</li>
 </ul>
 <p><img data-src="images/stoervariable.png" class="hcenter-image" style="margin-top: -10px; margin-bottom: 10px" height="160"></p>
 <p>→ Mehr dazu im Modul Forschungsmethoden!</p>
-<div class="sternchen">
-<p>(*)Angenommen wird hier ein “echtes Experiment”, d.h. mit randomisierter Zuordnung einer Stichprobe zu Experimentalbedingungen (das sog. <strong>randomisiert-kontrollierte Experiment</strong>)</p>
-</div>
+<!-- ::: {.sternchen}
+(*)Angenommen wird hier ein "echtes Experiment", d.h. mit randomisierter Zuordnung einer Stichprobe zu Experimentalbedingungen (das sog. **randomisiert-kontrollierte Experiment**)
+::: -->
 <!----------------->
 <!--- New slide --->
 <!----------------->
-</section>
-<section class="slide level2 blackslide center">
-<h2></h2>
-<img data-src="images/paradoxia_group_of_scientists.png" class="hcenter-image" height="300"> <!-- Source: Midjourney -->
-<div class="vspace-small">
+<!-- ## {.blackslide .center}
+::: {.content-hidden when-format="pdf"}
+![](images/paradoxia_group_of_scientists.png){.hcenter-image height=300px}
+<div class='vspace-small'></div>
+:::
 
-</div>
-<p>Ok, Task Force, betrachten wir noch einmal Hypothese 1:</p>
-<div class="fragment">
-<p><strong>Hypothese 1:</strong> Paradoxia wird durch eine virale Infektion verursacht. <em>Die Blutproben von Menschen mit Paradoxia sollten daher eine höhere Menge von Entzündungsmarkern aufweisen.</em></p>
-</div>
-<div class="vspace-large">
+Im Team der Task Force betrachten Sie noch einmal Hypothese 1:
 
-</div>
-<p>Warum wäre zur Überprüfung dieser Hypothese ein echtes Experiment ethisch schwierig? Welche Probleme weist andererseits eine reine Beobachtungsstudie (Vergleich der Entzündungsmarker von Paradoxikern und Kontrollen) auf?</p>
+::: {.fragment}
+**Hypothese 1:** Paradoxia wird durch eine virale Infektion verursacht. *Die Blutproben von Menschen mit Paradoxia sollten daher eine höhere Menge von Entzündungsmarkern aufweisen.*
+:::
+
+<div class="vspace-large"></div>
+
+Warum wäre zur Überprüfung dieser Hypothese ein echtes Experiment ethisch schwierig? Welche Probleme weist andererseits eine reine Beobachtungsstudie (Vergleich der Entzündungsmarker von Paradoxikern und Kontrollen) auf? -->
 </section></section>
 <section>
 <section class="title-slide slide level1 center">
@@ -1085,9 +1107,12 @@
 <li class="fragment">Vorteil: übersichtliche Darstellung der Verteilung kategorialer Variablen</li>
 <li class="fragment">Nachteil: verschiedene Bedingungen können nicht direkt verglichen werden (zwei Kreisdiagramme notwendig)</li>
 </ul>
+<div class="vspace-medium">
+
+</div>
 <div class="quarto-figure quarto-figure-center">
 <figure>
-<p><img data-src="images/kreisdiagramm_jasp.png" width="420"></p>
+<p><img data-src="images/kreisdiagramm_jasp.png" width="520"></p>
 <figcaption>Kreisdiagramm in JASP</figcaption>
 </figure>
 </div>
@@ -1147,11 +1172,14 @@ plt.legend(fontsize=fontsize)
 plt.tight_layout()
 plt.savefig(os.path.join(root, 'images', 'histogram_categorical.png'), bbox_inches="tight")
 ``` -->
+<div class="vspace-medium">
+
+</div>
 <div class="fragment">
 <div class="quarto-figure quarto-figure-center">
 <figure>
 <p><img data-src="images/histogram_categorical.png"></p>
-<figcaption>Vertikale und horizontale Darstellung von Häufigkeiten. Die Horizontale Darstellung hat den Vorteil, dass längere Beschriftungen der Balken möglich sind.</figcaption>
+<figcaption>Vertikale und horizontale Darstellung von Häufigkeiten. Die Horizontale Darstellung hat den Vorteil, dass längere Beschriftungen der Balken möglich sind. Die Darstellung mit vertikalen Balken wird zuweilen <strong>Säulendiagramm</strong> genannt und die Darstellung mit horizontalen Balken <strong>Balkendiagramm</strong>.</figcaption>
 </figure>
 </div>
 </div>
@@ -1206,13 +1234,16 @@ plt.savefig(os.path.join(root, 'images', 'histogram_categorical.png'), bbox_inch
         data-fragment-index: "6"                 --></div>
 </section>
 <section class="slide level2" style="overflow:hidden">
-<h2>Grundgesamtheit und Stichprobe</h2>
+<h2>Population und Stichprobe</h2>
 <ul>
-<li class="fragment"><span style=" color: navy !important;"><strong>Grundgesamtheit</strong></span> (auch <strong>Population</strong>) bezeichnet die Gesamtheit der Personen, für die wir uns in einer wissenschaftlichen Studie interessieren (z.B. Personen mit einer bestimmten Erkrankung, Kinder zwischen 3 und 6, die gesamte Menschheit)</li>
-<li class="fragment">In den meisten Fällen ist es nicht möglich alle Mitglieder der Grundgesamtheit zu untersuchen (Vollerhebung) – wir müssen daher eine <span style=" color: navy !important;"><strong>Stichprobe</strong></span> ziehen.</li>
-<li class="fragment">Die Annahme ist, dass die Stichprobe ein möglichst <strong>repräsentatives Abbild der Grundgesamtheit</strong> ist und sich Ergebnisse in der Stichprobe auf die Grundgesamtheit übertragen lassen.</li>
+<li class="fragment"><span style=" color: navy !important;"><strong>Population</strong></span> (auch <strong>Grundgesamtheit</strong>) bezeichnet die Gesamtheit der Personen, für die wir uns in einer wissenschaftlichen Studie interessieren (z.B. Personen mit einer bestimmten Erkrankung; Kinder zwischen 3 und 6; die gesamte Menschheit)</li>
+<li class="fragment">In den meisten Fällen ist es nicht möglich alle Mitglieder der Population zu untersuchen (Vollerhebung) – wir müssen daher eine <span style=" color: navy !important;"><strong>Stichprobe</strong></span> ziehen.</li>
+<li class="fragment">Die Annahme ist, dass die Stichprobe ein möglichst <strong>repräsentatives Abbild der Population</strong> ist und sich Ergebnisse in der Stichprobe auf die Population übertragen lassen.</li>
 </ul>
-<div class="quarto-figure quarto-figure-center" style="margin-top: -20px">
+<div class="vspace-medium">
+
+</div>
+<div class="quarto-figure quarto-figure-center">
 <figure>
 <p><img data-src="images/grundgesamtheit_stichprobe.svg" class="hcenter-image"></p>
 <figcaption>Bildnachweis<a href="#/footnotes" class="footnote-ref" id="fnref5" role="doc-noteref" data-footnote-href="#/fn5" onclick=""><sup>5</sup></a></figcaption>
@@ -1226,7 +1257,7 @@ plt.savefig(os.path.join(root, 'images', 'histogram_categorical.png'), bbox_inch
 <li class="fragment">In der Psychologie kommt “Zufall” an zwei Stellen ins Spiel:
 <ul>
 <li class="fragment"><strong>Messfehler</strong> (unbekannte, uns zufällig erscheinende, Einflüsse auf die Genauigkeit der Messung)</li>
-<li class="fragment">Beim <strong>zufälligen Ziehen einer Stichprobe</strong> aus der Grundgesamtheit</li>
+<li class="fragment">Beim <strong>zufälligen Ziehen einer Stichprobe</strong> aus der Population</li>
 </ul></li>
 <li class="fragment">Ein wichtiger Aspekt von Zufallsvariablen ist, dass die Zufälligkeit mathematisch beschrieben werden kann – durch <strong>Wahrscheinlichkeitsverteilungen</strong> (wir kommen darauf später noch einmal zurück)
 <ul>
@@ -1246,7 +1277,7 @@ plt.savefig(os.path.join(root, 'images', 'histogram_categorical.png'), bbox_inch
 <div class="column" style="width:70%;">
 <ul>
 <li class="fragment">Praktisch gesehen, sind nahezu alle Variablen in der Psychologie Zufallsvariablen, daher meint “Variable” in aller Regel “Zufallsvariable”</li>
-<li class="fragment">Die Ausnahme der Regel wäre der seltene Fall, dass eine Variable <em>für alle Personen der Grundgesamtkeit bekannt</em> ist und ihre Messung <em>keinem Messfehler</em> unterliegt (z.B. Geburtsjahr aller amerikanischen Präsidenten bis zum Jahr 2023).</li>
+<li class="fragment">Die Ausnahme der Regel wäre der seltene Fall, dass eine Variable <em>für alle Personen der Population bekannt</em> ist und ihre Messung <em>keinem Messfehler</em> unterliegt (z.B. Geburtsjahr aller amerikanischen Präsidenten bis zum Jahr 2023).</li>
 <li class="fragment">Zufallsvariablen werden mit großen Lettern bezeichnet, i.d.R. <span class="math inline">\(X\)</span> (oder <span class="math inline">\(Y\)</span>/<span class="math inline">\(Z\)</span> falls zwei/drei Zufallsvariablen betrachtet werden).</li>
 <li class="fragment">Einzelne Beobachtungen einer Zufallsvariable (z.B. der gemessene IQ von <em>bestimmten Personen</em>) werden mit kleinen Lettern bezeichnet (<span class="math inline">\(x_i\)</span>, <span class="math inline">\(y_i\)</span>, <span class="math inline">\(z_i\)</span>), wobei <span class="math inline">\(i\)</span> der Durchnummerierung dient. <!-- - Der Vektor $\mathbf{x}$ (beachte die Fettschrift) bezeichnet die Gesamtheit der Beobachtungen $x_1 .. x_N$ --></li>
 </ul>
@@ -1550,6 +1581,7 @@ plt.savefig(os.path.join(root, 'images', 'histogram_categorical.png'), bbox_inch
           }
         });
       }
+      // identifystring
 
       window.onload = bgcolor();
     </script>
