--- a/03_location_dispersion/_slides/index.html
+++ b/03_location_dispersion/_slides/index.html
@@ -437,7 +437,7 @@
 
 </div>
 <p><img data-src="images/paradoxia_histogram_tiktok_paradoxiker.png" height="400"></p>
-<p>Überschlagen Sie: passt das Histogramm zur angegeben Stichprobe von N=50 Paradoxikern? Und handelt es sich um eine Abbildung relativer oder absoluter Häufigkeit?</p>
+<p>Überschlagen Sie: passt das Histogramm zur angegeben Stichprobe von n=50 Paradoxikern? Und handelt es sich um eine Abbildung relativer oder absoluter Häufigkeit?</p>
 <!----------------->
 <!--- New slide --->
 <!----------------->
@@ -1259,7 +1259,7 @@ IQR = Q_{75\%} - Q_{25\%} = Q_3 - Q_1
 <ol type="1">
 <li class="fragment">Sortiere alle Werte von klein nach groß</li>
 <li class="fragment">Bestimme die Tiefe des Medians (runde ab bei unganzzahligem Wert):<span class="math inline">\(\,Tiefe_{\text{Median(abgerundet)}}\)</span></li>
-<li class="fragment">Bestimme die Tiefe des Quartils:  <span class="math inline">\(Tiefe_{\text{Quartil}}=\frac{Tiefe_{\text{Median(abgerundet)}}+1}{2}=\frac{\text{abgerundet}\big(\frac{N+1}{2}\big)+1}{2}\)</span></li>
+<li class="fragment">Bestimme die Tiefe des Quartils:  <span class="math inline">\(Tiefe_{\text{Quartil}}=\frac{Tiefe_{\text{Median(abgerundet)}}+1}{2}=\frac{\text{abgerundet}\big(\frac{n+1}{2}\big)+1}{2}\)</span></li>
 <li class="fragment">Für das 25%-Quantil (<span class="math inline">\(Q_1\)</span>) geht man <strong>von vorne</strong> in die Datenreihe</li>
 <li class="fragment">Für das 75%-Quantil (<span class="math inline">\(Q_3\)</span>) geht man <strong>von hinten</strong> in die Datenreihe</li>
 </ol></li>
@@ -1471,7 +1471,7 @@ plt.savefig('images/paradoxia_histogram_inflammation_mean_std.png', bbox_inches=
 
 <ol>
 <li id="fn1"><p>https://datatab.de/tutorial/mittelwert-median-modus</p></li>
-<li id="fn2"><p>Beispielsweise ist der Mittelwert der Mittelwerte von zwei Gruppen mit je N Datenpunkten gleich dem Mittelwert aller 2*N Datenpunkte. Beim Median ist dies nicht gegeben. Auch beziehen sich viele statistische Standardtests auf den Mittelwert und nicht den Median.</p></li>
+<li id="fn2"><p>Beispielsweise ist der Mittelwert der Mittelwerte von zwei Gruppen mit je n Datenpunkten gleich dem Mittelwert aller 2*n Datenpunkte. Beim Median ist dies nicht gegeben. Auch beziehen sich viele statistische Standardtests auf den Mittelwert und nicht den Median.</p></li>
 <li id="fn3"><p>https://youtu.be/inJ4OvU0zMA</p></li>
 <li id="fn4"><p>https://www.shiksha.com/online-courses/articles/measures-of-dispersion-range-iqr-variance-standard-deviation/</p></li>
 <li id="fn5"><p>https://web.archive.org/web/20221024193801/https://www4.hcmut.edu.vn/~ndlong/TK/mat/04_standard_deviation_vs_absolute_deviation.pdf</p></li>
