--- a/04_presentation/_slides/index.html
+++ b/04_presentation/_slides/index.html
@@ -342,6 +342,7 @@
 
   <p class="author">Prof.&nbsp;Matthias Guggenmos</p>
   <p class="institute">Health and Medical University Potsdam</p>
+  <p class="date">07.11.2023</p>
 <div style="display: flex; justify-content: space-between; align-items: baseline">
 <div><img src="images/logo_black.png" height="200px"></div>
 <div><img src="images/paradoxia_group_of_scientists.png" height="240px"></div>
@@ -1017,7 +1018,7 @@ plt.savefig('images/normal_sigma.png', bbox_inches='tight')
 </div>
 <p><img src="images/hmu_logo.png" class="slide-logo"></p>
 <div class="footer footer-default">
-
+<p>Vorlesung 04: Darstellung von Daten</p>
 </div>
 </section></section>
 <section id="footnotes" class="footnotes footnotes-end-of-document smaller scrollable" role="doc-endnotes"><h2>Fußnoten</h2>
@@ -1273,6 +1274,7 @@ plt.savefig('images/normal_sigma.png', bbox_inches='tight')
           }
         });
       }
+      // identifystring
 
       window.onload = bgcolor();
     </script>
